--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.4.4",
     "next-video": "^2.2.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tree": "^0.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
