--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.27.1",
     "@clerk/themes": "^2.4.2",
+    "firebase-admin": "^13.4.0",
     "lucide-react": "^0.532.0",
     "next": "15.4.4",
     "next-video": "^2.2.1",
