--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+/app/firestore/serviceAccountKey.json
+serviceAccountKey.json
 
 # vercel
 .vercel
