--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 /app/firestore/serviceAccountKey.json
-.serviceAccountKey.json
+serviceAccountKey.json
 
 # vercel
 .vercel
